--- a/index.html
+++ b/index.html
@@ -1,12 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Вебстудия</title>
 </head>
 <body>
-    <h1>привіт</h1>
+    <header>
+        <nav>
+            <a href="" lang="en">WebStudio</a>
+            <ul>
+                <li>
+                    <a href="#about">Студия</a>
+                </li>
+                <li>
+                    <a href="">Портфолио</a>
+                </li>
+                <li>
+                    <a href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </header>
+    <main>
+        <section>
+            <div>
+                <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <button class="button">Заказать услугу</button>
+
+            </div>
+        </section>
+        <section>
+            <h2>Наши особенности</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ВНИМАНИЕ К ДЕТАЛЯМ</th>
+                        <th>ПУНКТУАЛЬНОСТЬ</th>
+                        <th>ПЛАНИРОВАНИЕ</th>
+                        <th>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Идейные соображения, а также начало повседневной работы по формированию позиции.</td>
+                        <td>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</td>
+                        <td>Равным образом консультация с широким активом в значительной степени обуславливает.</td>
+                        <td>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <div>
+                <ul>
+                    <li>
+                        <img src="./images/why/why-img-1.jpg" alt="печать на кавиатуре и планшет" width="370"
+                            height="294" />
+                    </li>
+                    <li>
+                        <img src="./images/why/why-img-2.jpg" alt="работа с телефоном и ноутбуком" width="370"
+                            height="294" />
+                    </li>
+                    <li>
+                        <img src="./images/why/why-img-3.jpg" alt="цветовая палитра на планшете" width="370"
+                            height="294" />
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section id="about">
+            <h2>Наша команда</h2>
+            <div>
+                <ul>
+                    <li>
+                        <img src="./images/team/team-img-1.jpg" alt="игорь демьяненко продакт менеджер" width="270"
+                            height="368" />
+                        <h3>Игорь демьяненко</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./images/team/team-img-2.jpg" alt="ольга репина фронтент менеджер" width="270"
+                            height="368" />
+                        <h3>Ольга Репина</h3>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./images/team/team-img-3.jpg" alt="николай тарасов маркетинг" width="270"
+                            height="368" />
+                        <h3>Николай Тарасов</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/team/team-img-4.jpg" alt="михаил ермаков уи дезайнер" width="270"
+                            height="368" />
+                        <h3>Михаил Ермаков</h3>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Контакты</p>
+        <address>
+            <ul>
+                <li>
+                    <a href="" lang="en">WebStudio</a>
+                </li>
+                <li>
+                    г. Киев, пр-т Леси Украинки, 26
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
