--- a/index.html
+++ b/index.html
@@ -22,41 +22,42 @@
                 </li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </header>
     <main>
         <section>
-            <div>
                 <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button class="button">Заказать услугу</button>
-
-            </div>
         </section>
         <section>
-            <h2>Наши особенности</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ВНИМАНИЕ К ДЕТАЛЯМ</th>
-                        <th>ПУНКТУАЛЬНОСТЬ</th>
-                        <th>ПЛАНИРОВАНИЕ</th>
-                        <th>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Идейные соображения, а также начало повседневной работы по формированию позиции.</td>
-                        <td>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</td>
-                        <td>Равным образом консультация с широким активом в значительной степени обуславливает.</td>
-                        <td>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</td>
-                    </tr>
-                </tbody>
-            </table>
+            <ul>
+                <li>
+                    <h2>ВНИМАНИЕ К ДЕТАЛЯМ</h2>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h2>ПУНКТУАЛЬНОСТЬ</h2>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h2>ПЛАНИРОВАНИЕ</h2>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h2>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h2>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
-            <div>
                 <ul>
                     <li>
                         <img src="./images/why/why-img-1.jpg" alt="печать на кавиатуре и планшет" width="370"
@@ -71,49 +72,43 @@
                             height="294" />
                     </li>
                 </ul>
-            </div>
         </section>
         <section id="about">
             <h2>Наша команда</h2>
-            <div>
                 <ul>
                     <li>
-                        <img src="./images/team/team-img-1.jpg" alt="игорь демьяненко продакт менеджер" width="270"
+                        <img src="./images/team/team-img-1.jpg" alt="игорь демьяненко продакт менеджер" width="370"
                             height="368" />
                         <h3>Игорь демьяненко</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/team/team-img-2.jpg" alt="ольга репина фронтент менеджер" width="270"
+                        <img src="./images/team/team-img-2.jpg" alt="ольга репина фронтент менеджер" width="370"
                             height="368" />
                         <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/team/team-img-3.jpg" alt="николай тарасов маркетинг" width="270"
+                        <img src="./images/team/team-img-3.jpg" alt="николай тарасов маркетинг" width="370"
                             height="368" />
                         <h3>Николай Тарасов</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/team/team-img-4.jpg" alt="михаил ермаков уи дезайнер" width="270"
+                        <img src="./images/team/team-img-4.jpg" alt="михаил ермаков уи дезайнер" width="370"
                             height="368" />
                         <h3>Михаил Ермаков</h3>
                         <p>UI Designer</p>
                     </li>
                 </ul>
-            </div>
         </section>
     </main>
     <footer>
-        <p>Контакты</p>
+        <a href="" lang="en">WebStudio</a>
         <address>
             <ul>
                 <li>
-                    <a href="" lang="en">WebStudio</a>
-                </li>
-                <li>
-                    г. Киев, пр-т Леси Украинки, 26
+                    <a href="">г. Киев, пр-т Леси Украинки,26</a>
                 </li>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
