--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
                 <button class="button">Заказать услугу</button>
         </section>
         <section>
+            <h2>Особенности</h2>
             <ul>
                 <li>
-                    <h2>ВНИМАНИЕ К ДЕТАЛЯМ</h2>
+                    <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>ПУНКТУАЛЬНОСТЬ</h2>
+                    <h3>ПУНКТУАЛЬНОСТЬ</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>ПЛАНИРОВАНИЕ</h2>
+                    <h3>ПЛАНИРОВАНИЕ</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h2>
+                    <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -77,25 +78,25 @@
             <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./images/team/team-img-1.jpg" alt="игорь демьяненко продакт менеджер" width="370"
+                        <img src="./images/team/team-img-1.jpg" alt="игорь демьяненко продакт менеджер" width="270"
                             height="368" />
                         <h3>Игорь демьяненко</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/team/team-img-2.jpg" alt="ольга репина фронтент менеджер" width="370"
+                        <img src="./images/team/team-img-2.jpg" alt="ольга репина фронтент менеджер" width="270"
                             height="368" />
                         <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/team/team-img-3.jpg" alt="николай тарасов маркетинг" width="370"
+                        <img src="./images/team/team-img-3.jpg" alt="николай тарасов маркетинг" width="270"
                             height="368" />
                         <h3>Николай Тарасов</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/team/team-img-4.jpg" alt="михаил ермаков уи дезайнер" width="370"
+                        <img src="./images/team/team-img-4.jpg" alt="михаил ермаков уи дезайнер" width="270"
                             height="368" />
                         <h3>Михаил Ермаков</h3>
                         <p>UI Designer</p>
