--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <section>
                 <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-                <button class="button">Заказать услугу</button>
+                <button type="button">Заказать услугу</button>
         </section>
         <section>
             <h2>Особенности</h2>
@@ -79,25 +79,25 @@
                 <ul>
                     <li>
                         <img src="./images/team/team-img-1.jpg" alt="игорь демьяненко продакт менеджер" width="270"
-                            height="368" />
+                            height="260" />
                         <h3>Игорь демьяненко</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
                         <img src="./images/team/team-img-2.jpg" alt="ольга репина фронтент менеджер" width="270"
-                            height="368" />
+                            height="260" />
                         <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/team/team-img-3.jpg" alt="николай тарасов маркетинг" width="270"
-                            height="368" />
+                            height="260" />
                         <h3>Николай Тарасов</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
                         <img src="./images/team/team-img-4.jpg" alt="михаил ермаков уи дезайнер" width="270"
-                            height="368" />
+                            height="260" />
                         <h3>Михаил Ермаков</h3>
                         <p>UI Designer</p>
                     </li>
